Retrieve Filter UI

--- a/templates/base.html
+++ b/templates/base.html
@@ -316,6 +316,7 @@
   <script src="static/app/scripts/services/showservices.js" ></script>
   <script src="static/app/scripts/services/noteservices.js" ></script>
   <script src="static/app/scripts/services/commentservices.js" ></script>
+   <script src="static/app/scripts/services/settingservices.js" ></script>
 
   <script src="static/app/scripts/app.js" ></script>
    <script src="static/app/scripts/controllers/productcontrollers.js" ></script>
@@ -329,6 +330,7 @@
   <!--Admin controllers-->
   <script src="static/app/scripts/controllers/usercontrollers.js" ></script>
   <script src="static/app/scripts/controllers/groupcontrollers.js" ></script>
+  <script src="static/app/scripts/controllers/settingscontrollers.js" ></script>
   
 
   <script src="static/app/scripts/controllers/leadcontrollers.js" ></script>
