Opportunity stage,Case status, lead status

--- a/templates/opportunities/list.html
+++ b/templates/opportunities/list.html
@@ -84,10 +84,11 @@
                         <label  class="required control-label">{{_("Stage")}} </label>
                         
                         <div class="controls">
-                          <select ng-model="stage_selected" ng-options="opps.name for opps in opportunitystages" class="input-xlarge">
+                          <select ng-model="stage_selected" ng-options="opps.name for opps in opportunitystages | orderBy: 'name':true" class="input-xlarge">
                             <option value="">-- choose Stage --</option>
-                            <option value=""><%=stage_selected.name%></option>
+                          
                           </select>
+                          
                          
                         </div>
 
