--- a/templates/admin/settings/settings.html
+++ b/templates/admin/settings/settings.html
@@ -62,19 +62,19 @@
                                 <div class="dashboard-stat cards">
                                   
                                   <div class="details">
-                                    <a href="/#/contacts/show/<%= contact.id %>"><h3 class="relatedcardTitle">
-                                     <%=stage.name%> <%=stage.probability%>
+                                    <a> <h3 class="relatedcardTitle">
+                                     <%=stage.name%>  |  <%=stage.probability%> %
                                     </h3></a>
                                     <div class="desc">    
                                                              
-                                        <span class="contact-title"  > <a href="/#/search/type:Contact position:<%=contact.title%>">#<%=contact.title%></a>  </span>  
+                                        <span class="page-meta"><i class="icon-pencil"><a ng-click="editopportunitystage()" class="btn-link addAnotherPhone" data-toggle="modal" > {{_("Edit")}} </a></i></span>
                                     
                                     </div>
                                   </div>
-                                  <a class="more" href="#addOppStagetModal">
-                                  View more <i class="m-icon-swapright m-icon-white"></i>
-                                  </a>                 
+                                  
+                                                  
                                 </div>
+                                
                               </div>
                               
                               
@@ -98,12 +98,12 @@
                         </div>
                        
 
-                    <div id="addOppStagetModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
+          <div id="addOppStagetModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
                         <div class="modal-header">
                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
                           <h3 id="myModalLabel">{{_("New Opportunity Stage")}}</h3>
                         </div>
-                        <div class="modal-body">
+                <div class="modal-body">
                             <form id="addOppStage" name="addOppStage"  ng-submit="saveOppStage(oppstage)" class="form-horizontal"> 
                             <fieldset>
                             <div class="control-group">
@@ -122,16 +122,50 @@
                               </div>
                            </div>
                           
-                    </fieldset>
+                          </fieldset>
                 
-              </div>
-              <div class="modal-footer">
-                <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                <button  type="submit" class="btn green">{{_("Add a new Opportunity stage")}}</button>
-              </div>
-               </form>
+                  </div>
+                  <div class="modal-footer">
+                   <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
+                     <button  type="submit" class="btn green">{{_("Add a new Opportunity stage")}}</button>
+                   </div>
+                   </form>
        </div>
-    <!--End Contact Modal -->
+       <!-- HKA 15.12.2013 Edit Opportunity stage -->
+       <div id="EditOppsStage" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
+                        <div class="modal-header">
+                           <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                          <h3 id="myModalLabel">{{_("New Opportunity Stage")}}</h3>
+                        </div>
+                <div class="modal-body">
+                            <form id="addOppStage" name="addOppStage"  ng-submit="saveOppStage(oppstage)" class="form-horizontal"> 
+                            <fieldset>
+                            <div class="control-group">
+                              <label  class="required control-label">{{_("Name")}} *</label>
+                       
+                              <div class="controls">
+                              <input type="text" required id="id_firstname" ng-model="oppstage.name">
+                          
+                               </div>
+                            </div>
+                           <div class="control-group">
+                              <label  class=" control-label">{{_("Probability")}}</label>
+                              <div class="controls">
+                              <input type="text"  id="id_lastname" ng-model="oppstage.probability">
+                          
+                              </div>
+                           </div>
+                          
+                          </fieldset>
+                
+                  </div>
+                  <div class="modal-footer">
+                   <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
+                     <button  type="submit" class="btn green">{{_("Add a new Opportunity stage")}}</button>
+                   </div>
+                   </form>
+       </div>
+    
                       </div>
                       <div class="tab-pane active" id="tab_1_2" ng-show="selectedTab == 2">
                         
@@ -144,16 +178,16 @@
                                 
                           </div>
                             <div class="inner-cards-container">
-                              <div  class="span3 responsive"  data-tablet="span6" data-desktop="span3">
+                              <div  class="span3 responsive"  data-tablet="span6" ng-repeat="casestate in casesatuses " data-desktop="span3">
                                 <div class="dashboard-stat cards">
                                   
                                   <div class="details">
-                                    <a href="/#/contacts/show/<%= contact.id %>"><h3 class="relatedcardTitle">
-                                     Staus : Open
+                                    <a href="/#/"><h3 class="relatedcardTitle">
+                                     <%=casestate.status%>
                                     </h3></a>
                                     <div class="desc">    
                                                              
-                                        <span class="contact-title" ng-show="contact.title" > <a href="/#/search/type:Contact position:<%=contact.title%>">#<%=contact.title%></a>  </span>  
+                                        <span class="contact-title" ng-show="contact.title" > <a href="/#/search/type:Contact position:<%=contact.title%>"></a>  </span>  
                                     
                                     </div>
                                   </div>
@@ -187,16 +221,16 @@
                     <div id="addCasestatustModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
                         <div class="modal-header">
                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                          <h3 id="myModalLabel">{{_("New Contact")}}</h3>
+                          <h3 id="myModalLabel">{{_("New Case Status")}}</h3>
                         </div>
                         <div class="modal-body">
-                            <form id="addContact" name="addcontact"  ng-submit="savecontact(contact)" class="form-horizontal"> 
+                            <form id="addcasestatus" name="addcasestatus"  ng-submit="saveCaseStatus(casestatus)" class="form-horizontal"> 
                             <fieldset>
                             <div class="control-group">
                               <label  class="required control-label">{{_("Case Status")}} *</label>
                        
                               <div class="controls">
-                              <input type="text" required id="id_firstname" ng-model="contact.firstname">
+                              <input type="text" required id="id_firstname" ng-model="casestatus.status">
                           
                                </div>
                             </div>
@@ -206,7 +240,7 @@
               </div>
               <div class="modal-footer">
                 <button class="btn" data-dismiss="modal" aria-hidden="true">{{_("Cancel")}}</button>
-                <button  type="submit" class="btn green">{{_("Add Contact")}}</button>
+                <button  type="submit" class="btn green">{{_("Add Case Status")}}</button>
               </div>
                </form>
        </div>
@@ -224,12 +258,12 @@
                                 
                           </div>
                             <div class="inner-cards-container">
-                              <div  class="span3 responsive"  data-tablet="span6" data-desktop="span3">
+                              <div  class="span3 responsive" ng-repeat="leadstat in leadstatuses"  data-tablet="span6" data-desktop="span3">
                                 <div class="dashboard-stat cards">
                                   
                                   <div class="details">
                                     <a href="/#/contacts/show/<%= contact.id %>"><h3 class="relatedcardTitle">
-                                     Lead Status : New
+                                     Lead Status : <%=leadstat.status%>
                                     </h3></a>
                                     <div class="desc">    
                                                              
@@ -267,16 +301,16 @@
                     <div id="addLeadstatustModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" >
                         <div class="modal-header">
                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-                          <h3 id="myModalLabel">{{_("New Contact")}}</h3>
+                          <h3 id="myModalLabel">{{_("New Lead status")}}</h3>
                         </div>
                         <div class="modal-body">
-                            <form id="addContact" name="addcontact"  ng-submit="savecontact(contact)" class="form-horizontal"> 
+                            <form id="saveLeadtatus" name="addleadstatus"  ng-submit="saveLeadtatus(lead)" class="form-horizontal"> 
                             <fieldset>
                             <div class="control-group">
                               <label  class="required control-label">{{_("Lead Status")}} *</label>
                        
                               <div class="controls">
-                              <input type="text" required id="id_firstname" ng-model="contact.firstname">
+                              <input type="text" required id="id_firstname" ng-model="lead.status">
                           
                                </div>
                             </div>
