--- a/templates/accounts/list.html
+++ b/templates/accounts/list.html
@@ -121,7 +121,7 @@
             
           </div>
         </div>
-          <div class="row-fluid">
+          <div class="row-fluid" ng-show="accounts">
             <div class="span2">
               <div class="btn-group">
                                     <a class="btn" href="#" data-toggle="dropdown">
@@ -129,7 +129,7 @@
                                     <i class="icon-angle-down"></i>
                                     </a>
                                     <ul class="dropdown-menu">
-                                      <li><a  ng-click="showCreateDocument('document')" href="#" data-toggle="modal">All accounts</a></li>
+                                      <li><a  ng-click="showCreateDocument('document')" href="#" data-toggle="modal"><strong>All accounts</strong></a></li>
                                       <li><a ng-click="showCreateDocument('presentation')" href="#" data-toggle="modal"> My accounts</a></li>
                                       
                                      
@@ -157,7 +157,7 @@
                                     <i class="icon-angle-down"></i>
                                     </a>
                                     <ul class="dropdown-menu">
-                                      <li><a  ng-click="showCreateDocument('document')" href="#" data-toggle="modal">Last modified</a></li>
+                                      <li><a  ng-click="showCreateDocument('document')" href="#" data-toggle="modal"><strong>Last modified</strong></a></li>
                                       <li><a ng-click="showCreateDocument('presentation')" href="#" data-toggle="modal">Name</a></li>
                                       
                                      
