--- a/templates/accounts/list.html
+++ b/templates/accounts/list.html
@@ -143,7 +143,7 @@
                     <form class="form-inline ng-pristine ng-valid" ng-submit="executeSearch(searchQuery)">
                       <div class="input-append row-fluid">
                         <input type="text" ng-model="searchQuery" typeahead="result as result.title + ' (' + result.type + ')' for result in results | filter:$viewValue | limitTo:8" typeahead-on-select="selectResult()" class="input-xxlarge" placeholder="Quick Filtering">
-                       <button class="gbqfb gbqfb-hvr"><span class="gbqfi"></span></button>
+                       <button class="gbqfb gbqfb-hvr"><i class="icon-filter"></i></button>
                       </div>
                     </form>
                   </li> 
