--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
   <meta content="" name="description" />
   <meta content="" name="author" />
   <!-- BEGIN GLOBAL MANDATORY STYLES -->
+  <script src="https://apis.google.com/js/client.js?onload=loadGapi">
   <link href="static/plugins/bootstrap/css/bootstrap.min.css"  rel="stylesheet" type="text/css"/>
   <link href="static/plugins/bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css"/>
   <link href="static/plugins/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
