rename browse companies , browse shows

--- a/templates/live/live_base.html
+++ b/templates/live/live_base.html
@@ -123,7 +123,7 @@
             <a href="#" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
             
             
-            <span class="username">Browse shows</span>
+            <span class="username">Shows</span>
             </a>
           </li>
 
@@ -145,7 +145,7 @@
             <a href="#" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
             
             
-            <span class="username">Browse companies</span>
+            <span class="username">Companies</span>
             </a>
           </li>
 
