--- a/templates/live_company_shows.html
+++ b/templates/live_company_shows.html
@@ -131,7 +131,7 @@
             <a href="#" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
             
             
-            <span class="username">Browse shows</span>
+            <span class="username">Shows</span>
             </a>
           </li>
 
@@ -153,7 +153,7 @@
             <a href="#" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
             
             
-            <span class="username">Browse companies</span>
+            <span class="username">Companies</span>
             </a>
           </li>
 
