--- a/templates/base.html
+++ b/templates/base.html
@@ -302,7 +302,7 @@
 
 
 
-
+  <script src="static/app/scripts/services/authservices.js"></script>
   <script src="static/app/scripts/services/productservices.js"></script>
   <script src="static/app/scripts/services/accountservices.js"></script>
   <script src="static/app/scripts/services/contactservices.js"></script>
@@ -323,6 +323,7 @@
 
   <script src="static/app/scripts/app.js" ></script>
    <script src="static/app/scripts/controllers/productcontrollers.js" ></script>
+   <script src="static/app/scripts/controllers/searchcontrollers.js" ></script>
   <script src="static/app/scripts/controllers/accountcontrollers.js" ></script>
   <script src="static/app/scripts/controllers/contactcontroller.js"></script>  
   <script src="static/app/scripts/controllers/opportunitycontroller.js" ></script>
