--- a/templates/accounts/note_show.html
+++ b/templates/accounts/note_show.html
@@ -2,7 +2,7 @@
       <!-- BEGIN SIDEBAR MENU -->        
       <ul class="page-sidebar-menu">
         {% for tab in tabs %}
-           <li id="id_{{tab.name}}"  ><a href="{{ tab.url }}"><i class="icon-cogs"></i><span class="title">     {{tab.label}}</span></a></li>
+           <li id="id_{{tab.name}}"><a href="{{ tab.url }}"><i class="icon-cogs"></i><span class="title"> {{tab.label}}</span></a></li>
           {% endfor %}
 
       </ul>   
@@ -11,7 +11,7 @@
 <div  class="page-content">
 <div class="container-fluid" ng-show="immediateFailed">
          <div class="span12">  
-          <h1>Sign-in Button;</h1>
+          <h1>{{ _("Sign-in Button;") }}</h1>
               <span id="signin">
                   <span id="myGsignin"></span>
               </span>
@@ -22,17 +22,14 @@
          <div class="span12">
          
             <div class="pull-right sharebuttonDiv"> 
-                  <a href="" class="btn blue jfk-button jfk-button-action">
-                    <i class="icon-lock"></i> Share
+                  <a href="" class="<btn blue jfk-button jfk-button-action">
+                    <i class="icon-lock"></i> {{ _("Share") }}
                   </a>     
             </div>
             <h2>
             <a href="<%=uri%>" data-toggle="tooltip" data-placement="bottom" title="Back to <%=note.about.kind%>">
             <img onload="this.__gwtLastUnhandledEvent=&quot;load&quot;;" src="https://admin.google.com/a/cpanel/gwt/cpanelnew/resources/clear.cache.gif" style="width: 21px; height: 21px; background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABUAAAAVCAYAAACpF6WWAAAAP0lEQVR42mNgGAXDApRT28AGIP5PCwP/08LA/9QKw/9kYLyggxaGYjMYHyApiBpoYSixSYqsyGwYzf+jgDQAAJylMNOnx10yAAAAAElFTkSuQmCC); background-position: 0px 0px; background-repeat: no-repeat no-repeat;" border="0" class="gwt-Image GI4HA0EPK cbarOpacity" aria-hidden="false"></a>    <%=note.about.kind%> > <%=note.about.name%>  </h2>
-            
 
-           
-              
           <hr>
       </div>
     </div>
@@ -71,12 +68,10 @@
       <!-- End Portlet -->
       <div class="row-fluid">
                   <div class="span12 margin-bottom-10">
-                 <p class⁼"lead"=""><strong>Just add comments to remember what's important :</strong> </p>
+                 <p class⁼"lead"=""><strong>{{ _("Just add comments to remember what's important :") }}</strong> </p>
                           <form id="addComment" ng-submit="addComment(comment)" class="ng-pristine ng-valid">
                                             <textarea id="noteBody" class="input-block-level ng-pristine ng-valid" rows="3" ng-model="comment.content"></textarea>
-                                          
-                                          
-                                         
+
                                          <div class="pull-right">
                                         
                                           <input ng-hide="isLoading" type="submit" class="btn green" value="Add comment">
@@ -126,7 +121,7 @@
       <div class="span4">
         <div class="portlet">
                 <div class="portlet-title line">
-                  <div class="caption"><i class="icon-tasks"></i>Who's involved</div>
+                  <div class="caption"><i class="icon-tasks"></i>{{ _("Who's involved") }}</div>
                   
                 </div>
                 <div class="portlet-body">
@@ -139,7 +134,7 @@
                      
                    
                   </li>
-                  <li><a href="#addContributor"  class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i>Add a new Contributor</a></li>
+                  <li><a href="#addContributor"  class="btn-link addAnotherPhone" data-toggle="modal"><i class="icon-plus"></i>{{ _("Add a new Contributor") }}</a></li>
 
                  
                 </ul>
@@ -156,7 +151,7 @@
                  <form id="addAccount" name="addaccount" ng-submit="addNewContributor(slected_memeber,role)" class="form-horizontal"> 
                   <fieldset>
                   
-                    <p>Invite people from your team and start working together on this task. Everyone you invite will receive an email.</p>
+                    <p>{{ _("Invite people from your team and start working together on this task. Everyone you invite will receive an email.") }}</p>
 
                     <div class='container-fluid'>
                     <div class="invitation" ng-show="slected_memeber">
@@ -164,15 +159,15 @@
                         <strong> <%= slected_memeber.google_display_name %> < <%=slected_memeber.email%> ></strong>
                     </div>
                     <div class="control-group">
-                      <input type="text" ng-model="user" typeahead="user as user.google_display_name + ' <' + user.email + '>' for user in users | filter:$viewValue | limitTo:8" typeahead-on-select="selectMember()" class="input-block-level" placeholder="Enter name or email addresse to involve people in this discussion">
+                      <input type="text" ng-model="user" typeahead="user as user.google_display_name + ' <' + user.email + '>' for user in users | filter:$viewValue | limitTo:8" typeahead-on-select="selectMember()" class="input-block-level" placeholder="{{_('Enter name or email addresse to involve people in this discussion')}}">
                     </div>
                     <div class="control-group">
-                          <label class="control-label">Add as:</label>
+                          <label class="control-label">{{ _("Add as:") }}</label>
                           <div class="controls">
                             <select class="medium m-wrap" tabindex="1" ng-model="role">
-                              <option value="responsible">Responsible</option>
-                              <option value="participant">Participant</option>
-                              <option value="invited">Invited</option>
+                              <option value="responsible">{{ _("Responsible") }}</option>
+                              <option value="participant">{{ _("Participant") }}</option>
+                              <option value="invited">{{ _("Invited") }}/option>
                               
                             </select>
                           </div>
