--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -71,11 +71,19 @@
                           
                         </div>
                     </div>
+                    <div class="control-group">
+                        <label  class=" control-label">{{_("Position")}} </label>
+                       
+                        <div class="controls">
+                          <input type="text"  id="id_position" ng-model="lead.position">
+                          
+                        </div>
+                    </div>
                      <div class="control-group">
                         <label  class="control-label">{{_("Status")}} </label>
                        
                         <div class="controls">
-                          <select ng-model="stage_selected" ng-options="lead.status for opps in leads | orderBy: 'status':true"  >
+                          <select ng-model="stage_selected" ng-options="leadstat.status for leadstat in leadstatuses | orderBy: 'status':false"  >
                             <option value="">-- choose Status --</option>
                           
                           </select>
