--- a/templates/contacts/list.html
+++ b/templates/contacts/list.html
@@ -129,7 +129,57 @@
           </div>
         </div>
 
+            <!-- Filtering and sorting -->
+          <div class="row-fluid" ng-show="contacts">
+            <div class="span2">
+              <div class="btn-group">
+                                    <a class="btn" href="#" data-toggle="dropdown">
+                                      {{ _('Filter by') }}
+                                    <i class="icon-angle-down"></i>
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                      <li><a  ng-click="filterByOwner()" href="#" data-toggle="modal">{{ _('All contacts') }}</a></li>
+                                      <li><a ng-click="filterByOwner('{{ME}}')" href="#" data-toggle="modal">{{ _('My contacts') }}</a></li>
+                                    </ul>
+                                    {{ _('Views') }}
+              </div>
+            </div>
+            <div class="span7">
+              <ul class="nav search-form-top"> 
+                  <li>    
+                    <form class="form-inline ng-pristine ng-valid" ng-submit="executeSearch(searchQuery)">
+                      <div class="input-append row-fluid">
+
+                        <input type="text" ng-model="searchQuery" typeahead="result as result.firstname + ' ' + result.lastname + ' - ' + result.position +' at ' + result.account_name + ' '  for result in results | filter:$viewValue | limitTo:8" typeahead-on-select="selectResult()" class="input-xxlarge" placeholder="{{ _('Quick Filtering') }}">
+
+                       <button class="gbqfb gbqfb-hvr"><i class="icon-filter"></i></button>
+                      </div>
+                    </form>
+                  </li> 
+              </ul>
+            </div>
+            <div class="span3">
+              <div class="btn-group pull-right">
+                                    <a class="btn" href="#" data-toggle="dropdown">
+                                    Sort by
+                                    <i class="icon-angle-down"></i>
+                                    </a>
+                                    <ul class="dropdown-menu">
+                                      <li><a  ng-click="orderBy('-updated_at')" href="#" data-toggle="modal">{{ _('Last modified') }}</a></li>
+                                      <li><a ng-click="orderBy('firstname')" href="#" data-toggle="modal">{{ _('First Name') }}</a></li>
+                                      <li><a ng-click="orderBy('lastname')" href="#" data-toggle="modal">{{ _('Last Name') }}</a></li>
+                                      <li><a ng-click="orderBy('title')" href="#" data-toggle="modal">{{ _('Title') }}</a></li>
+                                      <li><a ng-click="orderBy('account_name')" href="#" data-toggle="modal">{{ _('Company') }}</a></li>
+                                      
+                                     
+                                    </ul>
+              </div>
+
+            </div>
+            <br>
+              <br>
             
+          </div>
             <div class="row-fluid cards-container">
             <div class="inner-cards-container">
             
