--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -360,7 +360,7 @@
                         <label  class="required control-label">{{_("Stage")}} </label>
                         
                         <div class="controls">
-                          <select ng-model="stage_selected" ng-options="opps.name for opps in opportunitystages | orderBy: 'name':true"  >
+                          <select ng-model="stage_selected" ng-options="opps.name + ' - ( ' + opps.probability + '% )' for opps in opportunitystages | orderBy: 'name':true"  >
                             <option value=""><%=opportunity.stagename%> </option>
                             <!--option value=""><%=stage_selected.name%></option-->
                           </select>
