Iogrow Live Application with Tabs

--- a/templates/live/live_base.html
+++ b/templates/live/live_base.html
@@ -175,14 +175,14 @@
             <div class="row-fluid">
                 <div class="span8">
                     <p>
-                        <span class="margin-right-10">2013 © Metronic. ALL Rights Reserved.</span> 
+                        <span class="margin-right-10">2013 © I/ogrow. ALL Rights Reserved.</span> 
                         <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a>
                     </p>
                 </div>
                 <div class="span4">
                     <ul class="social-footer">
                         <li><a href="#"><i class="icon-facebook"></i></a></li>
-                        <li><a href="#"><i class="icon-google-plus"></i></a></li>
+                        <li><a href="https://plus.google.com/110820504821255547625/posts"><i class="icon-google-plus" target="new"></i></a></li>
                         <li><a href="#"><i class="icon-dribbble"></i></a></li>
                         <li><a href="#"><i class="icon-linkedin"></i></a></li>
                         <li><a href="#"><i class="icon-twitter"></i></a></li>
